Removing an '<img>' tag and adding two prints of the automated email that I sent to myself.

--- a/job web scraping and automatic e-mail sending/scraping_jobs_sitevagas.ipynb
+++ b/job web scraping and automatic e-mail sending/scraping_jobs_sitevagas.ipynb
@@ -42,6 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "<h4>2) Getting the Source Code</h4>\n",
     "\n",
     "Our source is gonna be the brazilian job website called <b>Vagas.com</b>, and the role is 'Data Analyst'. In the website, two filters are applied. One to show first the most recent jobs and the second is to show only jobs related to 'Data Analyst'."
@@ -61,6 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "<h4>3) Collecting Information</h4>\n",
     "\n",
     "The informations that we're gonna collect are: <b>Role</b>, <b>Company</b>, <b>Level</b> and <b>Job Link</b>. After we scrap the data, we're gonna storage in a list to further transform our lists in a <b>DataFrame</b> with pandas. "
@@ -70,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Collecting 'Role name' and 'Job link'. The variables are 'lista_cargos' and 'lista_linkvaga' respectively. The list 'site_para_concatenar' will be useful to correct the job link when the data frame is created"
+    "Collecting 'Role name' and 'Job link'. The variables are 'lista_cargos' and 'lista_linkvaga' respectively. The list 'site_para_concatenar' will be useful to correct the job link when the data frame is created."
    ]
   },
   {
@@ -122,6 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "<h4>4) Creating a DataFrame</h4>\n",
     "\n",
     "Alright, we have our four variables storaged in four lists. Now we will transform those lists in a dictionary called 'data' and finally create the DataFrame. the column 'auxiliar' is used concatenate the site domain 'vagas.com' with the link collected from the source code, generating a correct link in the column 'Link para Vaga'. "
@@ -282,6 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "Now that the DataFrame is created, we can save it in a excel spreadsheet using the method to_excel()."
    ]
   },
@@ -299,6 +303,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "<h4>5) Sending an e-mail</h4>\n",
     "\n",
     "Finally, the user will decide if he wants to receive a e-mail with the job spreadsheet. The function 'enviar_email()' takes care of all the parts of an e-mail like Subject, from, to and attachments. For this, the libraries smtplib and EmailMessage are being used. The variable msg will storage the parts of an e-mail, which will be used inside send_message ()"
@@ -367,21 +372,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "In this case, I'm sending a e-mail to myself for testing purpose"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"print_email.jpg\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<center><img src=\"print_email2.jpg\"></center>"
    ]
   }
  ],
