--- a/job web scraping and automatic e-mail sending/scraping_jobs_sitevagas.ipynb
+++ b/job web scraping and automatic e-mail sending/scraping_jobs_sitevagas.ipynb
@@ -136,135 +136,98 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                                Cargo  \\\n",
-      "0                Analista de Remuneração e Beneficios   \n",
-      "1                             Product Designer Sênior   \n",
-      "2                     Analista de Marketing I (25204)   \n",
-      "3                                Analista de Sistemas   \n",
-      "4   Analista de Analytics  Bi (Business Intelligence)   \n",
-      "5                        Analista de Marketing Sênior   \n",
-      "6                                      Analista de TI   \n",
-      "7                    Analista de Controladoria Sênior   \n",
-      "8                           Analista de Sistemas Java   \n",
-      "9     Analista de Segurança da Informação I (Barueri)   \n",
-      "10                          Analista de Sistemas Itsm   \n",
-      "11                Analista Suporte ao Cliente (Pleno)   \n",
-      "12          Analista de Operações de Negócio (Cs Ops)   \n",
-      "13  Analista de Segurança da Informação II (Algar ...   \n",
-      "14  Analista de Segurança da Informação III - Corp...   \n",
-      "15   Analista de Planejamento Financeiro   Fp&a Pleno   \n",
-      "16              Analista de Segurança da Informação I   \n",
-      "17                              Analista de CRM Pleno   \n",
-      "18                      Analista de Sistemas TI Pleno   \n",
-      "19                                    Analista de Mis   \n",
-      "20               Analista Estratégia de Crédito/Dados   \n",
-      "21                         Analista de Suprimentos Jr   \n",
-      "22     Analista de Inteligência de Mercado (Pesquisa)   \n",
-      "23                              Arquiteto de Sistemas   \n",
-      "24                                Desenvolvedor Pleno   \n",
-      "25                               Desenvolvedor Sênior   \n",
-      "26                   Analista de Proteção de Dados Sr   \n",
-      "27                           Analista de Qualidade Jr   \n",
-      "28                       Especialista em Data Science   \n",
-      "29                        Analista Desenvolvedor .Net   \n",
-      "30            Analista de Informações de Marketing Sr   \n",
-      "31  Analista Corporativo Tecnologia Informação Sênior   \n",
-      "32     Analista Administrativo de Planejamento Júnior   \n",
-      "33                 Analista de Recrutamento e Seleção   \n",
-      "34                               Analista de BI Pleno   \n",
-      "35                                 Analista Sr  Redes   \n",
-      "36                               Analista de Sistemas   \n",
-      "37                                Analista Sr Storage   \n",
-      "38                                 Analista Sr Backup   \n",
-      "39                              Analista Jr SAP Basis   \n",
-      "\n",
-      "                      Empresa           Nivel  \\\n",
-      "0                   KornFerry          Sênior   \n",
-      "1                       Ânima          Sênior   \n",
-      "2   Dafiti|GlobalFashionGroup          Sênior   \n",
-      "3                Confidencial           Pleno   \n",
-      "4                Confidencial          Sênior   \n",
-      "5                        Omie          Sênior   \n",
-      "6                Confidencial  Júnior/Trainee   \n",
-      "7                  GrupoSERES           Pleno   \n",
-      "8         BRQDigitalSolutions          Sênior   \n",
-      "9                      Orizon  Júnior/Trainee   \n",
-      "10               Confidencial           Pleno   \n",
-      "11                  VAGAS.com           Pleno   \n",
-      "12                  VAGAS.com          Sênior   \n",
-      "13               AlgarTelecom  Júnior/Trainee   \n",
-      "14               AlgarTelecom           Pleno   \n",
-      "15                     Adecco           Pleno   \n",
-      "16                     Orizon  Júnior/Trainee   \n",
-      "17                       Omie           Pleno   \n",
-      "18                  UniRitter           Pleno   \n",
-      "19                       TTEC  Júnior/Trainee   \n",
-      "20               Confidencial           Pleno   \n",
-      "21              LafargeHolcim  Júnior/Trainee   \n",
-      "22                      Ânima           Pleno   \n",
-      "23            GrupoSuperNosso          Sênior   \n",
-      "24            GrupoSuperNosso           Pleno   \n",
-      "25            GrupoSuperNosso          Sênior   \n",
-      "26               MinervaFoods          Sênior   \n",
-      "27                  GrupoSITI           Pleno   \n",
-      "28                        DP6          Sênior   \n",
-      "29                  GrupoSITI          Sênior   \n",
-      "30                 GrupoSERES          Sênior   \n",
-      "31          RedeSantaCatarina          Sênior   \n",
-      "32               CONFIDENCIAL  Júnior/Trainee   \n",
-      "33                 Concentrix           Pleno   \n",
-      "34            GrupoSuperNosso           Pleno   \n",
-      "35                  GrupoSITI          Sênior   \n",
-      "36                  GrupoSITI          Sênior   \n",
-      "37                  GrupoSITI          Sênior   \n",
-      "38                  GrupoSITI          Sênior   \n",
-      "39                  GrupoSITI          Sênior   \n",
-      "\n",
-      "                                       Link para vaga  \n",
-      "0   vagas.com.br/vagas/v2326995/analista-de-remune...  \n",
-      "1   vagas.com.br/vagas/v2340790/product-designer-s...  \n",
-      "2   vagas.com.br/vagas/v2341397/analista-de-market...  \n",
-      "3    vagas.com.br/vagas/v2340235/analista-de-sistemas  \n",
-      "4   vagas.com.br/vagas/v2340227/analista-de-analyt...  \n",
-      "5   vagas.com.br/vagas/v2340293/analista-de-market...  \n",
-      "6          vagas.com.br/vagas/v2340209/analista-de-ti  \n",
-      "7   vagas.com.br/vagas/v2340419/analista-de-contro...  \n",
-      "8   vagas.com.br/vagas/v2340749/analista-de-sistem...  \n",
-      "9   vagas.com.br/vagas/v2339709/analista-de-segura...  \n",
-      "10  vagas.com.br/vagas/v2339774/analista-de-sistem...  \n",
-      "11  vagas.com.br/vagas/v2328147/analista-suporte-a...  \n",
-      "12  vagas.com.br/vagas/v2339151/analista-de-operac...  \n",
-      "13  vagas.com.br/vagas/v2340036/analista-de-segura...  \n",
-      "14  vagas.com.br/vagas/v2340031/analista-de-segura...  \n",
-      "15  vagas.com.br/vagas/v2338875/analista-de-planej...  \n",
-      "16  vagas.com.br/vagas/v2339342/analista-de-segura...  \n",
-      "17  vagas.com.br/vagas/v2332969/analista-de-crm-pleno  \n",
-      "18  vagas.com.br/vagas/v2339224/analista-de-sistem...  \n",
-      "19        vagas.com.br/vagas/v2338593/analista-de-mis  \n",
-      "20  vagas.com.br/vagas/v2337260/analista-estrategi...  \n",
-      "21  vagas.com.br/vagas/v2305292/analista-de-suprim...  \n",
-      "22  vagas.com.br/vagas/v2336992/analista-de-inteli...  \n",
-      "23  vagas.com.br/vagas/v2336656/arquiteto-de-sistemas  \n",
-      "24    vagas.com.br/vagas/v2336697/desenvolvedor-pleno  \n",
-      "25   vagas.com.br/vagas/v2336725/desenvolvedor-senior  \n",
-      "26  vagas.com.br/vagas/v2336690/analista-de-protec...  \n",
-      "27  vagas.com.br/vagas/v2336540/analista-de-qualid...  \n",
-      "28  vagas.com.br/vagas/v2333440/especialista-em-da...  \n",
-      "29  vagas.com.br/vagas/v2335959/analista-desenvolv...  \n",
-      "30  vagas.com.br/vagas/v2336132/analista-de-inform...  \n",
-      "31  vagas.com.br/vagas/v2336244/analista-corporati...  \n",
-      "32  vagas.com.br/vagas/v2335353/analista-administr...  \n",
-      "33  vagas.com.br/vagas/v2336267/analista-de-recrut...  \n",
-      "34   vagas.com.br/vagas/v2336115/analista-de-bi-pleno  \n",
-      "35      vagas.com.br/vagas/v2306532/analista-sr-redes  \n",
-      "36   vagas.com.br/vagas/v2317021/analista-de-sistemas  \n",
-      "37    vagas.com.br/vagas/v2306597/analista-sr-storage  \n",
-      "38     vagas.com.br/vagas/v2306610/analista-sr-backup  \n",
-      "39  vagas.com.br/vagas/v2316797/analista-jr-sap-basis  \n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cargo</th>\n",
+       "      <th>Empresa</th>\n",
+       "      <th>Nivel</th>\n",
+       "      <th>Link para vaga</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Analista de Suporte Técnico Cloud Sr</td>\n",
+       "      <td>T-SystemsdoBrasil</td>\n",
+       "      <td>Sênior</td>\n",
+       "      <td>vagas.com.br/vagas/v2342977/analista-de-suport...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Analista de Dados de Marketing</td>\n",
+       "      <td>GrupoSERES</td>\n",
+       "      <td>Sênior</td>\n",
+       "      <td>vagas.com.br/vagas/v2342959/analista-de-dados-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Analista de TI Pleno</td>\n",
+       "      <td>OEC-OdebrechtEngenharia&amp;Construção</td>\n",
+       "      <td>Pleno</td>\n",
+       "      <td>vagas.com.br/vagas/v2343066/analista-de-ti-pleno</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Analista de Portfólio de Crédito Pleno</td>\n",
+       "      <td>Neon</td>\n",
+       "      <td>Pleno</td>\n",
+       "      <td>vagas.com.br/vagas/v2342721/analista-de-portfo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Analista de Portfólio de Crédito Júnior</td>\n",
+       "      <td>Neon</td>\n",
+       "      <td>Júnior/Trainee</td>\n",
+       "      <td>vagas.com.br/vagas/v2342724/analista-de-portfo...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     Cargo  \\\n",
+       "0     Analista de Suporte Técnico Cloud Sr   \n",
+       "1           Analista de Dados de Marketing   \n",
+       "2                     Analista de TI Pleno   \n",
+       "3   Analista de Portfólio de Crédito Pleno   \n",
+       "4  Analista de Portfólio de Crédito Júnior   \n",
+       "\n",
+       "                              Empresa           Nivel  \\\n",
+       "0                   T-SystemsdoBrasil          Sênior   \n",
+       "1                          GrupoSERES          Sênior   \n",
+       "2  OEC-OdebrechtEngenharia&Construção           Pleno   \n",
+       "3                                Neon           Pleno   \n",
+       "4                                Neon  Júnior/Trainee   \n",
+       "\n",
+       "                                      Link para vaga  \n",
+       "0  vagas.com.br/vagas/v2342977/analista-de-suport...  \n",
+       "1  vagas.com.br/vagas/v2342959/analista-de-dados-...  \n",
+       "2   vagas.com.br/vagas/v2343066/analista-de-ti-pleno  \n",
+       "3  vagas.com.br/vagas/v2342721/analista-de-portfo...  \n",
+       "4  vagas.com.br/vagas/v2342724/analista-de-portfo...  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -278,7 +241,7 @@
     "job_data.drop('auxiliar', inplace=True, axis = 1)\n",
     "job_data.drop('Link', inplace=True, axis = 1)\n",
     "\n",
-    "print(job_data)"
+    "job_data.head()"
    ]
   },
   {
